--- a/historias.html
+++ b/historias.html
@@ -17,7 +17,7 @@
                 <div class="nav-items" id="-items">
                 <a href="index.html"> INICIO</a>
                 <a href="/ARTE">ARTE</a>
-                <a href="/CONTACTO">HISTORIAS</a>
+                <a href="historias.html">HISTORIAS</a>
                 <a href="/CONTACTO">CONTACTO</a>
                </div> 
           <div class="nave-toggle" id="-toggle" >
