--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nav-items" id="-items">
                 <a href="index.html"> INICIO</a>
                 <a href="/">ARTE</a>
-                <a href="historias.html"HISTORIAS>HISTORIAS</a>
+                <a href="historias.html">HISTORIAS</a>
                 <a href="formulario.html">CONTACTO</a>
                </div> 
           <div class="nave-toggle" id="-toggle" >
